Use insecure theme

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,8 @@
-dist
-dist-*
-cabal-dev
-*.o
-*.hi
-*.chi
-*.chs.h
-*.dyn_o
-*.dyn_hi
-.hpc
-.hsenv
-.cabal-sandbox/
-cabal.sandbox.config
-*.prof
-*.aux
-*.hp
-*.eventlog
-.stack-work/
-cabal.project.local
-_cache/
-_site/
+_site
+_drafts/pages/cv_on_hold.html
+.sass-cache
+.jekyll-cache
+.jekyll-metadata
+vendor
+min/
+Gemfile.lock
