--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,9 @@ title: Insecure mode
 description: >- # this means to ignore newlines until "baseurl:"
   Programming bits, big and small
 baseurl: "" # the subpath of your site, e.g. /blog
-url: ""
+url: drobnik.github.io
 show_excerpts: true
 locale: en_GB
-image: assets/img/socialpreview.jpg
 
 author: Karolina Drobnik
 github_username: drobnik
@@ -38,11 +37,6 @@ jekyll-archives:
   layouts:
     year: year_archive
     month: month_archive
-
-# Tag pages
-#tag_page_layout: tag_page
-#tag_page_dir: tag
-#tag_permalink_style: pretty
 
 # Exclude from processing.
 exclude:
