Publish the hello world post

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ locale: en_GB
 author: Karolina Drobnik
 github_username: drobnik
 twitter_username: drobnik_k
+linkedin_username: km-drobnik
 
 theme: minima
 plugins:
